--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
           <div class="logo-box">
             <a href="/">
               <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601085399/Screen_Shot_2020-09-25_at_9.56.16_PM_zc3uhz.png" width="100px" height="90px">
+              <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601236485/kisspng-vue-js-javascript-library-angularjs-react-vue-js-5b4ebe1bc45884.1915769815318871318042_mzjval.jpg" width="100px" height="90px" alt="">
             </a>
           </div>
           <nav>
