--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,8 @@
         <h3>Projects & Skills</h3>
     
         <div class="skillsIcons">
-            <img class="dev-icons" src="https://res.cloudinary.com/nsh/image/upload/v1594930764/jscsshtml_wmvhci.jpg" width="400px" height="200px" >
+            <!-- <img class="dev-icons" src="https://res.cloudinary.com/nsh/image/upload/v1594930764/jscsshtml_wmvhci.jpg" width="400px" height="200px" > -->
+            <img class="dev-icons" src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601175666/Screen_Shot_2020-09-26_at_11.00.47_PM_xafd7d.png" width="400px" height="600px" alt="">
            
         </div>
         <div class= "projectsSlides"></div>
