--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
         </nav>
         </div>
       </header>
-      <h1 class="pageHeader">Contact Me</h1>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdAhzlxsTvvHUQ4tCw6atv1Y25B6tVgb4hbocdVH8aL63Pw8Q/viewform?embedded=true" width="640" height="641" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      <!-- <h1 class="pageHeader">Contact Me</h1> -->
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdAhzlxsTvvHUQ4tCw6atv1Y25B6tVgb4hbocdVH8aL63Pw8Q/viewform?embedded=true"  height="641" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       <div class="footer">
           <p>@NSH - 2020</p>
           <ul>
