--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
                 <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601253152/kisspng-node-js-javascript-web-application-express-js-comp-5ae0f84e5e7537.0464945815246930703869_1_akwpt0.png" alt="">
             </div>
             <div class="skills">
-                <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601253162/pngfind.com-cloud9-logo-png-3378411_1_hwcyyo.png" alt="">
+                <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601257394/heroku_ptltmi.jpg" alt="">
             </div>
             <div class="skills">
                 <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601253142/kisspng-mongodb-database-nosql-postgresql-mongo-5b39f9e36b1814.0344731115305261794387_xoz4kh.png" alt="">
