--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,9 @@
             <div class="skills">
                 <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601253910/Daco_4644573_uzg8ur.png" alt="">
             </div>
-
+            <div class="skills">
+                <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601258925/pngegg_1_ulxmdp.png" alt="">
+            </div>
 
             <div class="skills">
                 <img src="https://res.cloudinary.com/dcrioc0sw/image/upload/v1601254003/pngegg_pgkmmj.png"  alt="">
