--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,11 @@
       <div class="footer">
           <p>@NSH - 2020</p>
           <ul>
+            <li><a href="mailto: rachelshenhom@gmail.com" target="_gmail"><i class="fa fa-envelope-square"></i></a></li>
                <li><a href="https://www.linkedin.com/in/nang-shen-hom/" target="_linkedin"><i class="fa fa-linkedin"> </i> </a></li>
                <li><a href="https://github.com/Nangshen16" target="_github"><i class="fa fa-github"></i></a></li>
                <li><a href="https://wordpress.com/view/nangshenhomcode.wordpress.com" target="_wordpress"><i class="fa fa-wordpress"></i></a></li>
+               
           </ul>
       </div>
 </body>
