--- a/projects.html
+++ b/projects.html
@@ -115,11 +115,11 @@
             
         </div>
         <div class= "projectsSlides">
-            <a href="https://codepen.io/nangshen16/pen/ExPppaj">Link</a>
-            <a href="https://codepen.io/nangshen16/pen/GRoBXgz">Link</a>
-            <a href="https://codepen.io/nangshen16/pen/MWKBPJX">Link</a>
-            <a href="https://codepen.io/nangshen16/pen/KKVrPev">Link</a>
-            <a href="https://codepen.io/nangshen16/pen/xxZQvMd">Link</a>
+            <a href="https://codepen.io/nangshen16/pen/ExPppaj"></a>
+            <a href="https://codepen.io/nangshen16/pen/GRoBXgz"></a>
+            <a href="https://codepen.io/nangshen16/pen/MWKBPJX"></a>
+            <a href="https://codepen.io/nangshen16/pen/KKVrPev"></a>
+            <a href="https://codepen.io/nangshen16/pen/xxZQvMd"></a>
             
         </div>
 
